--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,6 +28,10 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.eclipselink-2.6.2.jar=/home/esteban/Downloads/jar_files (1)/eclipselink-2.6.2.jar
+file.reference.jaxb-api-2.2.jar=/home/esteban/Downloads/jaxb-api-2.2.jar
+file.reference.org.eclipse.persistence.moxy-2.6.2.jar=/home/esteban/Downloads/jar_files/org.eclipse.persistence.moxy-2.6.2.jar
+file.reference.validation-api-1.1.0.Final.jar=/home/esteban/Downloads/jar_files/validation-api-1.1.0.Final.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -37,7 +41,11 @@ j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.serve
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.jaxb-api-2.2.jar}:\
+    ${file.reference.org.eclipse.persistence.moxy-2.6.2.jar}:\
+    ${file.reference.validation-api-1.1.0.Final.jar}:\
+    ${file.reference.eclipselink-2.6.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
