--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,10 +28,25 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.eclipselink-2.6.2.jar=/home/esteban/Downloads/jar_files (1)/eclipselink-2.6.2.jar
-file.reference.jaxb-api-2.2.jar=/home/esteban/Downloads/jaxb-api-2.2.jar
-file.reference.org.eclipse.persistence.moxy-2.6.2.jar=/home/esteban/Downloads/jar_files/org.eclipse.persistence.moxy-2.6.2.jar
-file.reference.validation-api-1.1.0.Final.jar=/home/esteban/Downloads/jar_files/validation-api-1.1.0.Final.jar
+file.reference.aopalliance-repackaged-2.4.0-b10.jar=lib/jax dependecy/aopalliance-repackaged-2.4.0-b10.jar
+file.reference.hk2-api-2.4.0-b10.jar=lib/jax dependecy/hk2-api-2.4.0-b10.jar
+file.reference.hk2-locator-2.4.0-b10.jar=lib/jax dependecy/hk2-locator-2.4.0-b10.jar
+file.reference.hk2-utils-2.4.0-b10.jar=lib/jax dependecy/hk2-utils-2.4.0-b10.jar
+file.reference.javassist-3.18.1-GA.jar=lib/jax dependecy/javassist-3.18.1-GA.jar
+file.reference.javax.annotation-api-1.2.jar=lib/jax dependecy/javax.annotation-api-1.2.jar
+file.reference.javax.inject-2.4.0-b10.jar=lib/jax dependecy/javax.inject-2.4.0-b10.jar
+file.reference.javax.ws.rs-api-2.0.1.jar=lib/jax dependecy/javax.ws.rs-api-2.0.1.jar
+file.reference.jaxb-api-2.2.jar=lib/jaxb-api-2.2.jar
+file.reference.jaxrs-ri-2.17.jar=lib/jax dependecy/jaxrs-ri-2.17.jar
+file.reference.jersey-client-2.17.jar=lib/jax dependecy/jersey-client-2.17.jar
+file.reference.jersey-common-2.17.jar=lib/jax dependecy/jersey-common-2.17.jar
+file.reference.jersey-container-servlet-2.17.jar=lib/jax dependecy/jersey-container-servlet-2.17.jar
+file.reference.jersey-container-servlet-core-2.17.jar=lib/jax dependecy/jersey-container-servlet-core-2.17.jar
+file.reference.jersey-guava-2.17.jar=lib/jax dependecy/jersey-guava-2.17.jar
+file.reference.jersey-media-jaxb-2.17.jar=lib/jax dependecy/jersey-media-jaxb-2.17.jar
+file.reference.jersey-server-2.17.jar=lib/jax dependecy/jersey-server-2.17.jar
+file.reference.osgi-resource-locator-1.0.1.jar=lib/jax dependecy/osgi-resource-locator-1.0.1.jar
+file.reference.validation-api-1.1.0.Final.jar=lib/jax dependecy/validation-api-1.1.0.Final.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -43,9 +58,24 @@ jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
     ${file.reference.jaxb-api-2.2.jar}:\
-    ${file.reference.org.eclipse.persistence.moxy-2.6.2.jar}:\
-    ${file.reference.validation-api-1.1.0.Final.jar}:\
-    ${file.reference.eclipselink-2.6.2.jar}
+    ${file.reference.aopalliance-repackaged-2.4.0-b10.jar}:\
+    ${file.reference.hk2-api-2.4.0-b10.jar}:\
+    ${file.reference.hk2-locator-2.4.0-b10.jar}:\
+    ${file.reference.hk2-utils-2.4.0-b10.jar}:\
+    ${file.reference.javassist-3.18.1-GA.jar}:\
+    ${file.reference.javax.annotation-api-1.2.jar}:\
+    ${file.reference.javax.inject-2.4.0-b10.jar}:\
+    ${file.reference.javax.ws.rs-api-2.0.1.jar}:\
+    ${file.reference.jaxrs-ri-2.17.jar}:\
+    ${file.reference.jersey-client-2.17.jar}:\
+    ${file.reference.jersey-common-2.17.jar}:\
+    ${file.reference.jersey-container-servlet-2.17.jar}:\
+    ${file.reference.jersey-container-servlet-core-2.17.jar}:\
+    ${file.reference.jersey-guava-2.17.jar}:\
+    ${file.reference.jersey-media-jaxb-2.17.jar}:\
+    ${file.reference.jersey-server-2.17.jar}:\
+    ${file.reference.osgi-resource-locator-1.0.1.jar}:\
+    ${file.reference.validation-api-1.1.0.Final.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -72,10 +102,10 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
-no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
+rest.config.type=ide
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
